renovacao layout-land, navegacao entre as activities

--- a/SigaaBiblio/AndroidManifest.xml
+++ b/SigaaBiblio/AndroidManifest.xml
@@ -40,10 +40,20 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+         
         <activity
             android:name="com.nti.SigaaBiblio.activities.SituacaoUsuarioActivity"
             android:label="@string/title_activity_situacao_usuario" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
+        <!--<activity
+            android:name="com.nti.SigaaBiblio.ResultadoBuscaActivity"
+            android:label="@string/title_activity_resultado_busca" >
+        </activity>-->
     </application>
 
 </manifest>
