Mudanca nome de activities criacao artigo land, Inicio criacao activity exemplares

--- a/SigaaBiblio/AndroidManifest.xml
+++ b/SigaaBiblio/AndroidManifest.xml
@@ -56,7 +56,7 @@
         </activity>
         -->
         <activity
-            android:name="com.nti.SigaaBiblio.activities.BuscaArtigo"
+            android:name="com.nti.SigaaBiblio.activities.BuscaArtigoActivity"
             android:label="@string/title_activity_busca_artigo" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -81,6 +81,16 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.nti.SigaaBiblio.activities.ExemplaresActivity"
+            android:label="@string/title_activity_exemplares" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            
         </activity>
     </application>
 
