--- a/SigaaBiblio/AndroidManifest.xml
+++ b/SigaaBiblio/AndroidManifest.xml
@@ -49,12 +49,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <!--
         <activity
-            android:name="com.nti.SigaaBiblio.ResultadoBuscaActivity"
+            android:name="com.nti.SigaaBiblio.activities.ResultadoBuscaActivity"
             android:label="@string/title_activity_resultado_busca" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
-        -->
         <activity
             android:name="com.nti.SigaaBiblio.activities.BuscaArtigoActivity"
             android:label="@string/title_activity_busca_artigo" >
@@ -90,7 +93,15 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            
+        </activity>
+        <activity
+            android:name="com.nti.SigaaBiblio.activities.SelecionarHistoricoActivity"
+            android:label="@string/title_activity_selecionar_historico" >
+             <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
     </application>
 
