--- a/SigaaBiblio/AndroidManifest.xml
+++ b/SigaaBiblio/AndroidManifest.xml
@@ -121,6 +121,10 @@
             android:name="br.nti.SigaaBiblio.activities.ResultadoBuscaArtigoctivity"
             android:label="@string/title_activity_resultado_busca_artigoctivity" >
         </activity>
+        <activity
+            android:name="br.nti.SigaaBiblio.activities.ExemplarArtigoActivity"
+            android:label="@string/title_activity_exemplar_artigo" >
+        </activity>
     </application>
 
 </manifest>
