--- a/SigaaBiblio/AndroidManifest.xml
+++ b/SigaaBiblio/AndroidManifest.xml
@@ -125,7 +125,10 @@
             android:name="br.nti.SigaaBiblio.activities.ExemplarArtigoActivity"
             android:label="@string/title_activity_exemplar_artigo" >
         </activity>
-        
+        <activity
+            android:name="br.nti.SigaaBiblio.activities.CambridgeActivity"
+            android:label="@string/title_activity_cabridge" >
+        </activity>
     </application>
 
 </manifest>
