--- a/SigaaBiblio/AndroidManifest.xml
+++ b/SigaaBiblio/AndroidManifest.xml
@@ -129,6 +129,10 @@
             android:name="br.nti.SigaaBiblio.activities.CambridgeActivity"
             android:label="@string/title_activity_cabridge" >
         </activity>
+        <activity
+            android:name="br.nti.SigaaBiblio.activities.RegistroRenovacoesActivity"
+            android:label="@string/title_activity_registro_renovacoes" >
+        </activity>
     </application>
 
 </manifest>
