--- a/SigaaBiblio/AndroidManifest.xml
+++ b/SigaaBiblio/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <provider
+            android:name="br.nti.SigaaBiblio.persistence.UsuarioProvider"
+            android:authorities="br.nti.SigaaBiblio.model.Usuario.Usuarios" />
+
         <activity
             android:name="br.nti.SigaaBiblio.activities.LoginActivity"
             android:label="@string/app_name" >
