--- a/SigaaBiblio/AndroidManifest.xml
+++ b/SigaaBiblio/AndroidManifest.xml
@@ -8,7 +8,21 @@
         android:minSdkVersion="10"
         android:targetSdkVersion="10" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
+
+    <permission
+        android:name="com.nti.SigaaBiblio.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.nti.SigaaBiblio.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+	<uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -137,6 +151,15 @@
             android:name="br.nti.SigaaBiblio.activities.RegistroRenovacoesActivity"
             android:label="@string/title_activity_registro_renovacoes" >
         </activity>
+        <activity
+            android:name="br.nti.SigaaBiblio.activities.MapsActivity"
+            android:label="@string/title_activity_maps" >
+        </activity>
+        
+          <meta-data
+        android:name="com.google.android.maps.v2.API_KEY"
+        android:value="AIzaSyBYvcghsOwjFzRZ-hZLIunFtBM9ejf9HWY" />
+          
     </application>
 
 </manifest>
