--- a/SigaaBiblio/project.properties
+++ b/SigaaBiblio/project.properties
@@ -11,4 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-10
+target=android-17
+#android.library=true
+android.library.reference.1=../google_play_services/libproject/google-play-services_lib
+
