--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 # generated files
 bin/
 gen/
+
+# extralib
+google-play-services_lib/
+
 # Local configuration file (sdk path, etc)
 local.properties
 
